Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang = "en">
 <head>
 <!-- This is a comment -->
-
+<link rel="stylesheet" type="text/css" href="style.css">
+<title>
+  
+</title>
 </head>
 
 <body>
