Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
 <!-- This is a comment -->
 <link rel="stylesheet" type="text/css" href="style.css">
-<title>
-  
-</title>
+<title>Cat Perry's Favorite cATS</title>
 </head>
 
 <body>
