Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <!-- This is a comment -->
 <link rel="stylesheet" type="text/css" href="style.css">
-<title>Cat Perry's Favorite cATS</title>
+<title>Cat Perry's Favorite Cats</title>
+
 </head>
 
 <body>
