--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang = "en">
-<head>
+<!--<!DOCTYPE html>-->
+<!--<html lang = "en">-->
+<!--<head>-->
 <!-- This is a comment -->
-<link rel="stylesheet" type="text/css" href="style.css">
-<title>Cat Perry's Favorite Cats</title>
+<!--<link rel="stylesheet" type="text/css" href="style.css">-->
+<!--<title>Cat Perry's Favorite Cats</title>-->
 
-</head>
+<!--</head>-->
 
-<body>
+<!--<body>-->
   
-</body>
+<!--</body>-->
   
-</html>
+<!--</html>-->
