--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang = "en">-->
-<!--<head>-->
-<!-- This is a comment -->
-<!--<link rel="stylesheet" type="text/css" href="style.css">-->
-<!--<title>Cat Perry's Favorite Cats</title>-->
+<!DOCTYPE html>
+<html lang = "en">
+<head>
+ This is a comment 
+<link rel="stylesheet" type="text/css" href="style.css">
+<title>Cat Perry's Favorite Cats</title>
 
-<!--</head>-->
+</head>
 
-<!--<body>-->
+<body>
   
-<!--</body>-->
+</body>
   
-<!--</html>-->
+</html>
 
 <!--<!DOCTYPE html>-->
 <!--<html lang="en">-->
